fix for book covers

--- a/styles/main.css
+++ b/styles/main.css
@@ -6647,3 +6647,7 @@ article footer {
   border: 1px solid var(--background-tint-4);
 }
 
+.mini_cover {
+  float: left;
+  padding-right: 1em;
+}
